--- a/src/how_to_post.html
+++ b/src/how_to_post.html
@@ -224,7 +224,7 @@
       <div class="max-w-screen-xl px-4 pt-16 pb-28 mx-auto sm:px-6 lg:px-8 leading-7">
         <h1 itemprop="name" class="text-center text-3xl md:text-4xl xl:text-5xl font-bold pb-20 pt-16">Fire gode steps til at sammensætte en plakatvæg</h1>
         <!-- Step 1 -->
-        <div itemscope itemtype="https://schema.org/HowToSection">
+        <div id="step" itemscope itemtype="https://schema.org/HowToSection">
           <div class="grid grid-cols-1 gap-8 lg:gap-16 lg:grid-cols-2">
             <div
               class="relative h-64 overflow-hidden sm:h-80 lg:h-full lg:order-last"
@@ -243,7 +243,7 @@
                 Overvej hvilket udtryk du gerne vil udtrykke med din plakatvæg. Skal det være ren sort/hvid plakat væg? Eller en blanding af sort/hvid plakater og få plakater med farver? Det kan også være en samling af plakater i samme farvetoner eller en vild farvelade med mange farver.
               </p>
 
-              <ul class="mt-5 ml-10 list-disc text-gray-600">
+              <ul itemprop="itemListOrder" class="mt-5 ml-10 list-disc text-gray-600">
                 <li itemprop="itemListElement" class="pl-3">Vær bevidst om hvilke farve du sammensætter til plakatvæggen.</li>
                 <li itemprop="itemListElement" class="pl-3">Når man beslutter sig for farvertoner til plakatvæggen kan det også være kan det være en god ide at kigge på de omgivelser vægen er en sammenhæng med.</li>
               </ul>
@@ -251,7 +251,7 @@
           </div>
         </div>
         <!-- Step 2 -->
-        <div itemscope itemtype="https://schema.org/HowToSection" class="pt-16">
+        <div id="step" itemscope itemtype="https://schema.org/HowToSection" class="pt-16">
           <div class="grid grid-cols-1 gap-8 lg:gap-16 lg:grid-cols-2">
             <div
               class="relative h-64 overflow-hidden sm:h-80 lg:h-full lg:order-first"
@@ -270,7 +270,7 @@
                 Ligesom farverne er motiverne på plakaterne også med til at skabe et bestemt udtryk. Skal de være ensartede eller skal der være kontraster når øjet ser væggen? Og kan nogle motiver være med til at skabe en overraskelse når man betragter væggen.
               </p>
 
-              <ul class="mt-5 ml-10 list-disc text-gray-600">
+              <ul itemprop="itemListOrder" class="mt-5 ml-10 list-disc text-gray-600">
                 <li itemprop="itemListElement" class="pl-3">Hvis man har mange forskellige motiver kan det være en god ide at gruppere, så nogle af billederne taler sammen.</li>
                 <li itemprop="itemListElement" class="pl-3">Det kan også være en god ide at sammensætte motiver med stor kontrast, da de på den måde kan fremhæve hinanden.</li>
               </ul>
@@ -278,7 +278,7 @@
           </div>
         </div>
         <!-- Step 3 -->
-        <div itemscope itemtype="https://schema.org/HowToSection" class="pt-16">
+        <div id="step" itemscope itemtype="https://schema.org/HowToSection" class="pt-16">
           <div class="grid grid-cols-1 gap-8 lg:gap-16 lg:grid-cols-2">
             <div
               class="relative h-64 overflow-hidden sm:h-80 lg:h-full lg:order-last"
@@ -300,7 +300,7 @@
                 Flere formater og både bred og højformat skaber ofte et dynamisk udtryk, der kan være spændende at gå på opdagelse i. Udfordringen med denne slags layout er at det ofte bliver meget rodet, og derfor kan det være en fordel at følge nogle principper der kan hjælpe med at skabe ro. Det kan også være indbydende for øjet bare at gentage den samme størrelse, - på den måde kan motivet også komme mere til sin ret.
               </p>
 
-              <ul class="mt-5 ml-10 list-disc text-gray-600">
+              <ul itemprop="itemListOrder" class="mt-5 ml-10 list-disc text-gray-600">
                 <li itemprop="itemListElement" class="pl-3">Udvælg formater til din billedvæg. både plakater i forskellige størrelser, høj- og bred-format.</li>
                 <li itemprop="itemListElement" class="pl-3">Vælger man at gentage det samme format kan man eks. bryde layoutet ved at tage et eller to billeder ud.</li>
               </ul>
@@ -308,7 +308,7 @@
           </div>
         </div>
         <!-- Step 4 -->
-        <div itemscope itemtype="https://schema.org/HowToSection" class="pt-16">
+        <div id="step" itemscope itemtype="https://schema.org/HowToSection" class="pt-16">
           <div class="grid grid-cols-1 gap-8 lg:gap-16 lg:grid-cols-2">
             <div class="grid grid-cols-2 gap-4">
               <div>
@@ -351,7 +351,7 @@
                 Man kan bruge forskellige metoder til at skabe et fedt udtryk. Her er nogle du kan overveje at bruge hvis du har mange billeder. Hvis du har billederne i fysisk form, så start med at lave layoutet på gulvet, stil dig op på en stol og tag et billede når du er tilfreds med første udkast. Lav denne øvelser et par gange før du begynder at hænge dem op på væggen.
               </p>
 
-              <ul class="mt-5 ml-10 list-disc text-gray-600">
+              <ul itemprop="itemListOrder" class="mt-5 ml-10 list-disc text-gray-600">
                 <li itemprop="itemListElement" class="pl-3">Anvend linjer der flugter på forskellige måder.</li>
                 <li itemprop="itemListElement" class="pl-3">Arbejd med at have den samme afstand mellem rammerne. Kan man have den sammen afstand giver det ro.</li>
                 <li itemprop="itemListElement" class="pl-3">Man kan også arbejde med at placere billederne lidt abstrakt på væggen. Det kan skabe et mere livligt og overraskende look.</li>
