--- a/src/index.html
+++ b/src/index.html
@@ -281,37 +281,27 @@
     <!-- Hero end -->
 
     <!-- Content start -->
-    <!-- Landingpages buttons start -->
-    <a class="relative inline-block px-7 py-2.5 overflow-hidden border-2 border-black group focus:outline-none focus:ring" href="landingpage_1.html">
-      <div class="inline-flex items-center">
-        <span class="absolute inset-y-0 left-0 w-[2px] transition-all bg-black group-hover:w-full group-active:bg-black"></span>
-        <span class="relative text-base font-medium text-black transition-colors group-hover:text-white">
+    <!-- Links start -->
+    <div class="flex justify-center">
+      <div class="flex justify-center mt-5 gap-4 max-w-sm">
+        <a class="underline hover:text-gray-500 text-black text-xs" href="landingpage_1.html">
           Landingpage 1
-        </span>
-        <svg class="w-7 h-auto ml-5 relative group-hover:fill-white group-active:fill-white" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--ic" width="32" height="32" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="#fffff" d="M8.59 16.59L13.17 12L8.59 7.41L10 6l6 6l-6 6l-1.41-1.41z"></path></svg>
-      </div>
-    </a>
+        </a>
 
-    <a class="relative inline-block px-7 py-2.5 overflow-hidden border-2 border-black group focus:outline-none focus:ring" href="landingpage_2.html">
-      <div class="inline-flex items-center">
-        <span class="absolute inset-y-0 left-0 w-[2px] transition-all bg-black group-hover:w-full group-active:bg-black"></span>
-        <span class="relative text-base font-medium text-black transition-colors group-hover:text-white">
+        <a class="underline hover:text-gray-500 text-black text-xs" href="landingpage_2.html">
           Landingpage 2
-        </span>
-        <svg class="w-7 h-auto ml-5 relative group-hover:fill-white group-active:fill-white" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--ic" width="32" height="32" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="#fffff" d="M8.59 16.59L13.17 12L8.59 7.41L10 6l6 6l-6 6l-1.41-1.41z"></path></svg>
-      </div>
-    </a>
-    <!-- Landingpages buttons end -->
+        </a>
 
-    <a class="relative inline-block px-7 py-2.5 overflow-hidden border-2 border-black group focus:outline-none focus:ring" href="google8320328ce972fbbc.html">
-      <div class="inline-flex items-center">
-        <span class="absolute inset-y-0 left-0 w-[2px] transition-all bg-black group-hover:w-full group-active:bg-black"></span>
-        <span class="relative text-base font-medium text-black transition-colors group-hover:text-white">
-          Verification
-        </span>
-        <svg class="w-7 h-auto ml-5 relative group-hover:fill-white group-active:fill-white" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--ic" width="32" height="32" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="#fffff" d="M8.59 16.59L13.17 12L8.59 7.41L10 6l6 6l-6 6l-1.41-1.41z"></path></svg>
+        <a class="underline hover:text-gray-500 text-black text-xs" href="sitemap.xml">
+          Sitemaps
+        </a>
+
+        <a class="underline hover:text-gray-500 text-black text-xs" href="google8320328ce972fbbc.html">
+          Google verification
+        </a>
       </div>
-    </a>
+    </div>
+    <!-- Links end -->
     
     <!-- Cookie start -->
     <aside
