--- a/src/landingpage_1.html
+++ b/src/landingpage_1.html
@@ -8,6 +8,12 @@
   <title>Lunefuld Lykke</title>
   <link rel="stylesheet" href="tailwind.css" />
   <script src="scripts.js" defer></script>
+
+  <!-- Tab icon start -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/src/content/favicon_io/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/src/content//favicon_io/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/src/content//favicon_io/favicon-16x16.png">
+  <!-- Tab icon end -->
 </head>
 
   <body>
