footer added on all sites

--- a/src/plakater.html
+++ b/src/plakater.html
@@ -648,14 +648,12 @@
         <div class="mx-auto container py-16 pb-7 xl:px-20 lg:px-12 sm:px-6 px-4">
             <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-3 xl:grid-cols-4 md:gap-8 gap-4">
                 <div class="flex flex-col flex-shrink-0">
-                    <div class="text-white font-bold">
-                        Lunefuld Lykke
-                    </div>
                     <a href="index.html">
-                      <img class="mt-5 w-40 h-auto" src="/src/content/lunefuld-lykke-white.svg" alt="">
+                      <img class="mt-0 w-40 h-auto" src="/src/content/lunefuld-lykke-white.svg" alt="">
                     </a>
-                    <p class="text-xs mt-5 leading-none text-gray-400">Copyright © 2022 Lunefuld Lykke</p>
-                    <div class="flex items-center mt-7 gap-x-4">
+                    <p class="text-xs mt-9 leading-none text-gray-400">Copyright © 2022 Lunefuld Lykke</p>
+                    <p class="text-xs mt-3 leading-none text-gray-400">CVR 12345678</p>
+                    <div class="flex items-center mt-9 gap-x-4">
                         <!-- Instagram -->
                         <button aria-label="instagram"
                             class="focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-800 w-9 h-9 flex-shrink-0 bg-black cursor-pointer hover:bg-white hover:bg-opacity-20 rounded-full flex items-center justify-center">
@@ -691,25 +689,25 @@
                 <div class="flex flex-col">
                     <h2 class="text-base font-bold leading-4  text-white">Navigation</h2>
                     <a href="index.html"
-                        class="focus:outline-none text-base leading-4 mt-6 w-fit text-gray-400 cursor-pointer hover:text-gray-300">Forside</a>
+                        class="focus:outline-none text-sm leading-4 mt-6 w-fit text-gray-400 cursor-pointer hover:text-gray-300">Forside</a>
                     <a href="plakater.html"
-                        class="focus:outline-none text-base leading-4 mt-6 w-fit text-gray-400 cursor-pointer hover:text-gray-300">Shop plakater</a>
+                        class="focus:outline-none text-sm leading-4 mt-6 w-fit text-gray-400 cursor-pointer hover:text-gray-300">Shop plakater</a>
                     <a href="litteratur.html"
-                        class="focus:outline-none text-base leading-4 mt-6 w-fit text-gray-400 cursor-pointer hover:text-gray-300">Shop litteratur</a>
+                        class="focus:outline-none text-sm leading-4 mt-6 w-fit text-gray-400 cursor-pointer hover:text-gray-300">Shop litteratur</a>
                     <a href="inspiration.html"
-                        class="focus:outline-none text-base leading-4 mt-6 w-fit text-gray-400 cursor-pointer hover:text-gray-300">Inspiration</a>
+                        class="focus:outline-none text-sm leading-4 mt-6 w-fit text-gray-400 cursor-pointer hover:text-gray-300">Inspiration</a>
                 </div>
                 <div class="flex flex-col">
                     <h2 class="text-base font-bold mt-10 lg:mt-0 leading-4  text-white">Kundeservice</h2>
                     <a href="om.html"
-                        class="focus:outline-none text-base leading-4 mt-6 w-fit text-gray-400 cursor-pointer hover:text-gray-300">Om os
+                        class="focus:outline-none text-sm leading-4 mt-6 w-fit text-gray-400 cursor-pointer hover:text-gray-300">Om os
                     </a>
                     <a href="javascript:void(0)"
-                        class="focus:outline-none text-base leading-4 mt-6 w-fit text-gray-400 cursor-pointer hover:text-gray-300">Kontakt os</a>
+                        class="focus:outline-none text-sm leading-4 mt-6 w-fit text-gray-400 cursor-pointer hover:text-gray-300">Kontakt os</a>
                     <a href="javascript:void(0)"
-                        class="focus:outline-none text-base leading-4 mt-6 w-fit text-gray-400 cursor-pointer hover:text-gray-300">FAQ</a>
+                        class="focus:outline-none text-sm leading-4 mt-6 w-fit text-gray-400 cursor-pointer hover:text-gray-300">FAQ</a>
                     <a href="javascript:void(0)"
-                        class="focus:outline-none text-base leading-4 mt-6 w-fit text-gray-400 cursor-pointer hover:text-gray-300">Handelsbetingelser</a>
+                        class="focus:outline-none text-sm leading-4 mt-6 w-fit text-gray-400 cursor-pointer hover:text-gray-300">Politikker og betingelser</a>
                 </div>
                 <div class="lg:block pt-0 mt-0 hidden">
                     <label class="text-base font-medium leading-4 text-white">Hold dig opdateret!</label>
@@ -727,6 +725,33 @@
                             </svg>
                         </button>
                     </div>
+                    <div
+                    class="grid grid-cols-1 mt-8 gap-1 bg-beige"
+                  >
+                    <!-- MAIL -->
+                    <div>
+                      <div class="inline-flex items-center text-gray-400">
+                        <span class="inline-flex flex-shrink-0 p-1 justify-center items-center text-">
+                          <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--ic" width="20" height="auto" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="currentColor" d="M22 4H2v16h20V4zm-2 4l-8 5l-8-5V6l8 5l8-5v2z"></path></svg>
+                        </span>
+                        <span class="inline-flex text-sm ml-1 px-2">
+                          <p>lunefuldlykke@kontakt.com</p>
+                        </span>
+                      </div>
+                    </div>
+              
+                    <!-- TELEFON -->
+                    <div>
+                      <div class="inline-flex items-center mt-1 text-gray-400">
+                        <span class="inline-flex flex-shrink-0 p-1 justify-center items-center text-">
+                          <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--ic" width="20" height="auto" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="currentColor" d="m21 15.46l-5.27-.61l-2.52 2.52a15.045 15.045 0 0 1-6.59-6.59l2.53-2.53L8.54 3H3.03C2.45 13.18 10.82 21.55 21 20.97v-5.51z"></path></svg>
+                        </span>
+                        <span class="inline-flex text-sm ml-1 px-2">
+                          <p>+45 12 34 56 78</p>
+                        </span>
+                      </div>
+                    </div>
+                  </div>
                 </div>
                 <div class="mt-10 lg:hidden">
                   <label class="text-base font-medium leading-4 text-white">Hold dig opdateret!</label>
@@ -743,6 +768,33 @@
                                   fill="currentColor" />
                           </svg>
                       </button>
+                  </div>
+                  <div
+                    class="grid grid-cols-1 mt-9 gap-1 bg-beige"
+                  >
+                    <!-- MAIL -->
+                    <div>
+                      <div class="inline-flex items-center text-white">
+                        <span class="inline-flex flex-shrink-0 p-1 justify-center items-center text-">
+                          <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--ic" width="20" height="auto" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="currentColor" d="M22 4H2v16h20V4zm-2 4l-8 5l-8-5V6l8 5l8-5v2z"></path></svg>
+                        </span>
+                        <span class="inline-flex text-sm ml-1 px-2">
+                          <p>lunefuldlykke@kontakt.com</p>
+                        </span>
+                      </div>
+                    </div>
+              
+                    <!-- TELEFON -->
+                    <div>
+                      <div class="inline-flex items-center text-white">
+                        <span class="inline-flex flex-shrink-0 p-1 justify-center items-center text-">
+                          <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--ic" width="20" height="auto" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="currentColor" d="m21 15.46l-5.27-.61l-2.52 2.52a15.045 15.045 0 0 1-6.59-6.59l2.53-2.53L8.54 3H3.03C2.45 13.18 10.82 21.55 21 20.97v-5.51z"></path></svg>
+                        </span>
+                        <span class="inline-flex text-sm ml-1 px-2">
+                          <p>+45 12 34 56 78</p>
+                        </span>
+                      </div>
+                    </div>
                   </div>
               </div>
             </div>
