--- a/src/litteratur.html
+++ b/src/litteratur.html
@@ -495,14 +495,12 @@
       <div class="mx-auto container py-16 pb-7 xl:px-20 lg:px-12 sm:px-6 px-4">
           <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-3 xl:grid-cols-4 md:gap-8 gap-4">
               <div class="flex flex-col flex-shrink-0">
-                  <div class="text-white font-bold">
-                      Lunefuld Lykke
-                  </div>
                   <a href="index.html">
-                    <img class="mt-5 w-40 h-auto" src="/src/content/lunefuld-lykke-white.svg" alt="">
+                    <img class="mt-0 w-40 h-auto" src="/src/content/lunefuld-lykke-white.svg" alt="">
                   </a>
-                  <p class="text-xs mt-5 leading-none text-gray-400">Copyright © 2022 Lunefuld Lykke</p>
-                  <div class="flex items-center mt-7 gap-x-4">
+                  <p class="text-xs mt-9 leading-none text-gray-400">Copyright © 2022 Lunefuld Lykke</p>
+                  <p class="text-xs mt-3 leading-none text-gray-400">CVR 12345678</p>
+                  <div class="flex items-center mt-9 gap-x-4">
                       <!-- Instagram -->
                       <button aria-label="instagram"
                           class="focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-800 w-9 h-9 flex-shrink-0 bg-black cursor-pointer hover:bg-white hover:bg-opacity-20 rounded-full flex items-center justify-center">
@@ -538,25 +536,25 @@
               <div class="flex flex-col">
                   <h2 class="text-base font-bold leading-4  text-white">Navigation</h2>
                   <a href="index.html"
-                      class="focus:outline-none text-base leading-4 mt-6 w-fit text-gray-400 cursor-pointer hover:text-gray-300">Forside</a>
+                      class="focus:outline-none text-sm leading-4 mt-6 w-fit text-gray-400 cursor-pointer hover:text-gray-300">Forside</a>
                   <a href="plakater.html"
-                      class="focus:outline-none text-base leading-4 mt-6 w-fit text-gray-400 cursor-pointer hover:text-gray-300">Shop plakater</a>
+                      class="focus:outline-none text-sm leading-4 mt-6 w-fit text-gray-400 cursor-pointer hover:text-gray-300">Shop plakater</a>
                   <a href="litteratur.html"
-                      class="focus:outline-none text-base leading-4 mt-6 w-fit text-gray-400 cursor-pointer hover:text-gray-300">Shop litteratur</a>
+                      class="focus:outline-none text-sm leading-4 mt-6 w-fit text-gray-400 cursor-pointer hover:text-gray-300">Shop litteratur</a>
                   <a href="inspiration.html"
-                      class="focus:outline-none text-base leading-4 mt-6 w-fit text-gray-400 cursor-pointer hover:text-gray-300">Inspiration</a>
+                      class="focus:outline-none text-sm leading-4 mt-6 w-fit text-gray-400 cursor-pointer hover:text-gray-300">Inspiration</a>
               </div>
               <div class="flex flex-col">
                   <h2 class="text-base font-bold mt-10 lg:mt-0 leading-4  text-white">Kundeservice</h2>
                   <a href="om.html"
-                      class="focus:outline-none text-base leading-4 mt-6 w-fit text-gray-400 cursor-pointer hover:text-gray-300">Om os
+                      class="focus:outline-none text-sm leading-4 mt-6 w-fit text-gray-400 cursor-pointer hover:text-gray-300">Om os
                   </a>
                   <a href="javascript:void(0)"
-                      class="focus:outline-none text-base leading-4 mt-6 w-fit text-gray-400 cursor-pointer hover:text-gray-300">Kontakt os</a>
+                      class="focus:outline-none text-sm leading-4 mt-6 w-fit text-gray-400 cursor-pointer hover:text-gray-300">Kontakt os</a>
                   <a href="javascript:void(0)"
-                      class="focus:outline-none text-base leading-4 mt-6 w-fit text-gray-400 cursor-pointer hover:text-gray-300">FAQ</a>
+                      class="focus:outline-none text-sm leading-4 mt-6 w-fit text-gray-400 cursor-pointer hover:text-gray-300">FAQ</a>
                   <a href="javascript:void(0)"
-                      class="focus:outline-none text-base leading-4 mt-6 w-fit text-gray-400 cursor-pointer hover:text-gray-300">Handelsbetingelser</a>
+                      class="focus:outline-none text-sm leading-4 mt-6 w-fit text-gray-400 cursor-pointer hover:text-gray-300">Politikker og betingelser</a>
               </div>
               <div class="lg:block pt-0 mt-0 hidden">
                   <label class="text-base font-medium leading-4 text-white">Hold dig opdateret!</label>
@@ -574,6 +572,33 @@
                           </svg>
                       </button>
                   </div>
+                  <div
+                  class="grid grid-cols-1 mt-8 gap-1 bg-beige"
+                >
+                  <!-- MAIL -->
+                  <div>
+                    <div class="inline-flex items-center text-gray-400">
+                      <span class="inline-flex flex-shrink-0 p-1 justify-center items-center text-">
+                        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--ic" width="20" height="auto" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="currentColor" d="M22 4H2v16h20V4zm-2 4l-8 5l-8-5V6l8 5l8-5v2z"></path></svg>
+                      </span>
+                      <span class="inline-flex text-sm ml-1 px-2">
+                        <p>lunefuldlykke@kontakt.com</p>
+                      </span>
+                    </div>
+                  </div>
+            
+                  <!-- TELEFON -->
+                  <div>
+                    <div class="inline-flex items-center mt-1 text-gray-400">
+                      <span class="inline-flex flex-shrink-0 p-1 justify-center items-center text-">
+                        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--ic" width="20" height="auto" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="currentColor" d="m21 15.46l-5.27-.61l-2.52 2.52a15.045 15.045 0 0 1-6.59-6.59l2.53-2.53L8.54 3H3.03C2.45 13.18 10.82 21.55 21 20.97v-5.51z"></path></svg>
+                      </span>
+                      <span class="inline-flex text-sm ml-1 px-2">
+                        <p>+45 12 34 56 78</p>
+                      </span>
+                    </div>
+                  </div>
+                </div>
               </div>
               <div class="mt-10 lg:hidden">
                 <label class="text-base font-medium leading-4 text-white">Hold dig opdateret!</label>
@@ -591,6 +616,33 @@
                         </svg>
                     </button>
                 </div>
+                <div
+                  class="grid grid-cols-1 mt-9 gap-1 bg-beige"
+                >
+                  <!-- MAIL -->
+                  <div>
+                    <div class="inline-flex items-center text-white">
+                      <span class="inline-flex flex-shrink-0 p-1 justify-center items-center text-">
+                        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--ic" width="20" height="auto" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="currentColor" d="M22 4H2v16h20V4zm-2 4l-8 5l-8-5V6l8 5l8-5v2z"></path></svg>
+                      </span>
+                      <span class="inline-flex text-sm ml-1 px-2">
+                        <p>lunefuldlykke@kontakt.com</p>
+                      </span>
+                    </div>
+                  </div>
+            
+                  <!-- TELEFON -->
+                  <div>
+                    <div class="inline-flex items-center text-white">
+                      <span class="inline-flex flex-shrink-0 p-1 justify-center items-center text-">
+                        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--ic" width="20" height="auto" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="currentColor" d="m21 15.46l-5.27-.61l-2.52 2.52a15.045 15.045 0 0 1-6.59-6.59l2.53-2.53L8.54 3H3.03C2.45 13.18 10.82 21.55 21 20.97v-5.51z"></path></svg>
+                      </span>
+                      <span class="inline-flex text-sm ml-1 px-2">
+                        <p>+45 12 34 56 78</p>
+                      </span>
+                    </div>
+                  </div>
+                </div>
             </div>
           </div>
 
@@ -601,8 +653,8 @@
               <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--logos" width="auto" height="23" preserveAspectRatio="xMidYMid meet" viewBox="0 0 256 302"><path fill="#27346A" d="M217.168 23.507C203.234 7.625 178.046.816 145.823.816h-93.52A13.393 13.393 0 0 0 39.076 12.11L.136 259.077c-.774 4.87 2.997 9.28 7.933 9.28h57.736l14.5-91.971l-.45 2.88c1.033-6.501 6.593-11.296 13.177-11.296h27.436c53.898 0 96.101-21.892 108.429-85.221c.366-1.873.683-3.696.957-5.477c-1.556-.824-1.556-.824 0 0c3.671-23.407-.025-39.34-12.686-53.765"></path><path fill="#27346A" d="M102.397 68.84a11.737 11.737 0 0 1 5.053-1.14h73.318c8.682 0 16.78.565 24.18 1.756a101.6 101.6 0 0 1 6.177 1.182a89.928 89.928 0 0 1 8.59 2.347c3.638 1.215 7.026 2.63 10.14 4.287c3.67-23.416-.026-39.34-12.687-53.765C203.226 7.625 178.046.816 145.823.816H52.295C45.71.816 40.108 5.61 39.076 12.11L.136 259.068c-.774 4.878 2.997 9.282 7.925 9.282h57.744L95.888 77.58a11.717 11.717 0 0 1 6.509-8.74Z"></path><path fill="#2790C3" d="M228.897 82.749c-12.328 63.32-54.53 85.221-108.429 85.221H93.024c-6.584 0-12.145 4.795-13.168 11.296L61.817 293.621c-.674 4.262 2.622 8.124 6.934 8.124h48.67a11.71 11.71 0 0 0 11.563-9.88l.474-2.48l9.173-58.136l.591-3.213a11.71 11.71 0 0 1 11.562-9.88h7.284c47.147 0 84.064-19.154 94.852-74.55c4.503-23.15 2.173-42.478-9.739-56.054c-3.613-4.112-8.1-7.508-13.327-10.28c-.283 1.79-.59 3.604-.957 5.477Z"></path><path fill="#1F264F" d="M216.952 72.128a89.928 89.928 0 0 0-5.818-1.49a109.904 109.904 0 0 0-6.177-1.174c-7.408-1.199-15.5-1.765-24.19-1.765h-73.309a11.57 11.57 0 0 0-5.053 1.149a11.683 11.683 0 0 0-6.51 8.74l-15.582 98.798l-.45 2.88c1.025-6.501 6.585-11.296 13.17-11.296h27.444c53.898 0 96.1-21.892 108.428-85.221c.367-1.873.675-3.688.958-5.477c-3.122-1.648-6.501-3.072-10.14-4.279a83.26 83.26 0 0 0-2.77-.865"></path></svg>
             </div>          
       </div>
-  </footer>
-  <!-- Footer end -->
+    </footer>
+    <!-- Footer end -->
 
     <script type="module" src="index.js"></script>
 </body>
