link made invicible

--- a/src/index.html
+++ b/src/index.html
@@ -288,21 +288,21 @@
 
     <!-- Content start -->
     <!-- Links start -->
-    <div class="flex justify-center">
+    <div class="flex justify-center text-white">
       <div class="flex justify-center mt-5 gap-4 max-w-sm">
-        <a class="underline hover:text-gray-500 text-black text-xs" href="landingpage_1.html">
+        <a class="underline hover:text-gray-500  text-xs" href="landingpage_1.html">
           Landingpage 1
         </a>
 
-        <a class="underline hover:text-gray-500 text-black text-xs" href="landingpage_2.html">
+        <a class="underline hover:text-gray-500  text-xs" href="landingpage_2.html">
           Landingpage 2
         </a>
 
-        <a class="underline hover:text-gray-500 text-black text-xs" href="sitemap.xml">
+        <a class="underline hover:text-gray-500  text-xs" href="sitemap.xml">
           Sitemaps
         </a>
 
-        <a class="underline hover:text-gray-500 text-black text-xs" href="google8320328ce972fbbc.html">
+        <a class="underline hover:text-gray-500 text-xs" href="google8320328ce972fbbc.html">
           Google verification
         </a>
       </div>
