pictures added index

--- a/src/index.html
+++ b/src/index.html
@@ -449,17 +449,17 @@
                     loading="lazy"
                     alt="Simple Watch"
                     class="object-cover"
-                    src="https://images.unsplash.com/photo-1523275335684-37898b6baf30"
+                    src="/src/content/read_this_if_you_want_to_take_great_photographs_af_henry_carroll.jpg"
                   />
                 </div>
 
                 <div class="mt-2">
-                  <h5 class="font-medium">
-                    Simple Watch
+                  <h5 class="text-base font-bold">
+                    Read This if You Want to Take Great Photographs
                   </h5>
 
-                  <p class="mt-1 text-sm text-gray-700">
-                    $150
+                  <p class="mt-2 text-base font-medium text-gray-700">
+                    249,- kr.
                   </p>
                 </div>
               </a>
@@ -473,17 +473,17 @@
                     loading="lazy"
                     alt="Simple Watch"
                     class="object-cover"
-                    src="https://images.unsplash.com/photo-1523275335684-37898b6baf30"
+                    src="/src/content/the_polaroid_book_af_barbara_hitchcock.jpg"
                   />
                 </div>
 
                 <div class="mt-2">
-                  <h5 class="font-medium">
-                    Simple Watch
+                  <h5 class="text-base font-bold">
+                    The Polaroid Book
                   </h5>
 
-                  <p class="mt-1 text-sm text-gray-700">
-                    $150
+                  <p class="mt-2 text-base font-medium text-gray-700">
+                    399,- kr.
                   </p>
                 </div>
               </a>
@@ -497,17 +497,17 @@
                     loading="lazy"
                     alt="Simple Watch"
                     class="object-cover"
-                    src="https://images.unsplash.com/photo-1523275335684-37898b6baf30"
+                    src="/src/content/photographers_trouble_shooter_af_michael_freeman.jpg"
                   />
                 </div>
 
                 <div class="mt-2">
-                  <h5 class="font-medium">
-                    Simple Watch
+                  <h5 class="text-base font-bold">
+                    Photographer's trouble shooter
                   </h5>
 
-                  <p class="mt-1 text-sm text-gray-700">
-                    $150
+                  <p class="mt-2 text-base font-medium text-gray-700">
+                    149,- kr.
                   </p>
                 </div>
               </a>
@@ -541,26 +541,22 @@
                   class="block"
                 >
                   <div class="text-center">
-                    <p class="text-xs text-indigo-500">
-                      Banana
-                    </p>
-
-                    <h5 class="font-bold">
-                      Smart Watch
+                    <h5 class="text-base font-bold">
+                      Holbæk
                     </h5>
                   </div>
 
-                  <div class="aspect-w-1 aspect-h-1">
+                  <div class="aspect-w-1 mt-2 aspect-h-1">
                     <img
                       loading="lazy"
                       alt="Smart Watch"
                       class="object-cover"
-                      src="https://images.unsplash.com/photo-1546868871-7041f2a55e12"
+                      src="/src/content/posters/poster-8.jpg"
                     />
                   </div>
 
-                  <p class="mt-1 text-base text-center lg:text-left font-medium text-gray-700">
-                    $49.99
+                  <p class="mt-2 text-center lg:text-left text-base font-medium text-gray-700">
+                    Fra 199,- kr.
                   </p>
                 </a>
               </li>
@@ -571,26 +567,23 @@
                   class="block"
                 >
                   <div class="text-center">
-                    <p class="text-xs text-indigo-500">
-                      Banana
-                    </p>
 
-                    <h5 class="font-bold">
-                      Smart Watch
+                    <h5 class="text-base font-bold">
+                      Irland
                     </h5>
                   </div>
 
-                  <div class="aspect-w-1 aspect-h-1">
+                  <div class="aspect-w-1 mt-2 aspect-h-1">
                     <img
                       loading="lazy"
                       alt="Smart Watch"
                       class="object-cover"
-                      src="https://images.unsplash.com/photo-1546868871-7041f2a55e12"
+                      src="/src/content/posters/poster-24.jpg"
                     />
                   </div>
 
-                  <p class="mt-1 text-base text-center lg:text-left font-medium text-gray-700">
-                    $49.99
+                  <p class="mt-2 text-center lg:text-left text-base font-medium text-gray-700">
+                    Fra 199,- kr.
                   </p>
                 </a>
               </li>
@@ -601,26 +594,23 @@
                   class="block"
                 >
                   <div class="text-center">
-                    <p class="text-xs text-indigo-500">
-                      Banana
-                    </p>
 
-                    <h5 class="font-bold">
-                      Smart Watch
+                    <h5 class="text-base font-bold">
+                      Højbanen
                     </h5>
                   </div>
 
-                  <div class="aspect-w-1 aspect-h-1">
+                  <div class="aspect-w-1 mt-2 aspect-h-1">
                     <img
                       loading="lazy"
                       alt="Smart Watch"
                       class="object-cover"
-                      src="https://images.unsplash.com/photo-1546868871-7041f2a55e12"
+                      src="/src/content/posters/poster-2.jpg"
                     />
                   </div>
 
-                  <p class="mt-1 text-base text-center lg:text-left font-medium text-gray-700">
-                    $49.99
+                  <p class="mt-2 text-center lg:text-left text-base font-medium text-gray-700">
+                    Fra 199,- kr.
                   </p>
                 </a>
               </li>
@@ -631,26 +621,23 @@
                   class="block"
                 >
                   <div class="text-center">
-                    <p class="text-xs text-indigo-500">
-                      Banana
-                    </p>
 
-                    <h5 class="font-bold">
-                      Smart Watch
+                    <h5 class="text-base font-bold">
+                      Frankrig
                     </h5>
                   </div>
 
-                  <div class="aspect-w-1 aspect-h-1">
+                  <div class="aspect-w-1 mt-2 aspect-h-1">
                     <img
                       loading="lazy"
                       alt="Smart Watch"
                       class="object-cover"
-                      src="https://images.unsplash.com/photo-1546868871-7041f2a55e12"
+                      src="/src/content/posters/poster-23.jpg"
                     />
                   </div>
 
-                  <p class="mt-1 text-base text-center lg:text-left font-medium text-gray-700">
-                    $49.99
+                  <p class="mt-2 text-center lg:text-left text-base font-medium text-gray-700">
+                    Fra 199,- kr.
                   </p>
                 </a>
               </li>
