--- a/src/index.html
+++ b/src/index.html
@@ -348,7 +348,7 @@
           <div class="grid grid-cols-1 gap-8 lg:gap-16 lg:grid-cols-2">
             <div class="max-w-screen-xl bg-black text-white px-4 py-16 mx-auto sm:px-6 lg:px-8">
               <div class="max-w-lg mx-auto text-center">
-                <h1 class="text-2xl font-bold sm:text-3xl">Få 20% rabat på din ordre!</h1>
+                <h1 class="text-2xl lg:text-3xl font-bold">Få 20% rabat på din ordre!</h1>
 
                 <p class="mt-4">
                   Lige nu får du 20% rabat på dit første køb, når du tilmelder dig vores nyhedsbrev. Tilbuddet gælder kun til maj, skynd dig!
@@ -401,7 +401,7 @@
             </div>
       
             <div class="lg:py-24 bg-white">
-              <h2 class="text-3xl font-bold sm:text-4xl">Fotoentusiaster med hjerte</h2>
+              <h2 class="text-2xl lg:text-3xl font-bold">Fotoentusiaster med hjerte</h2>
       
               <p class="mt-5 text-base lg:text-lg">
                 Hos Lunefuld Lykke elsker vi både fotografi, fotokunst og mennesker. Derfor er det vigtigt for os at støtte et godt formål
