--- a/src/kunstnere.html
+++ b/src/kunstnere.html
@@ -232,9 +232,9 @@
     <div class="2xl:container 2xl:mx-auto">
         <div class="lg:px-20 md:px-6 px-4 md:py-12 py-8">
             <div class="max-w-xs md:max-w-md lg:max-w-md mx-auto mb-10 lg:mb-14">
-                <h1 class="text-3xl lg:text-4xl font-semibold text-gray-800  text-center ">
+                <h2 class="text-2xl lg:text-3xl font-bold text-center">
                     Mød kunstnerne
-                </h1>
+                </h2>
                 <p class="text-center pt-8">
                     Hos Lunefuld Lykke går vi meget op i at støtte kunstere. Derfor kan du her læse alt om kunstnerne bag plakaterne.
                 </p>
