--- a/src/inspiration.html
+++ b/src/inspiration.html
@@ -232,9 +232,9 @@
     <div class="2xl:container 2xl:mx-auto">
         <div class="lg:px-20 md:px-6 px-4 md:py-12 py-8">
             <div class="max-w-xs md:max-w-md lg:max-w-md mx-auto mb-10 lg:mb-14">
-                <h1 class="text-3xl lg:text-4xl font-semibold text-gray-800  text-center ">
+                <h2 class="text-2xl lg:text-3xl font-bold text-center">
                     Inspiration
-                </h1>
+                </h2>
                 <p class="text-center pt-8">
                     Hvem laver de flotteste fotos og hvordan kan du pynte hjemmet med fotoplakater? Læs med her
                     for at få lidt inspiration.
