--- a/src/kategori.html
+++ b/src/kategori.html
@@ -228,10 +228,10 @@
     <div class="2xl:container 2xl:mx-auto">
         <div class="lg:px-20 md:px-6 px-4 md:py-12 py-8">
             <div class="max-w-xs md:max-w-md lg:max-w-md mx-auto">
-                <h1 class="text-3xl lg:text-4xl font-semibold text-gray-800 text-center">
+                <h2 class="text-2xl lg:text-3xl font-bold text-center">
                     Plakater
-                </h1>
-                <h2 class="text-xl mt-4 lg:text-2xl font-semibold text-gray-800 text-center">Natur</h2>
+                </h2>
+                <h3 class="text-xl mt-4 lg:text-2xl font-semibold text-gray-800 text-center">Natur</h3>
                 <p class="text-center pt-8">
                     Naturlig skønhed, klar til at komme op og hænge på din væg!
                 </p>
