--- a/src/litteratur.html
+++ b/src/litteratur.html
@@ -228,9 +228,9 @@
     <div class="2xl:container 2xl:mx-auto">
         <div class="lg:px-20 md:px-6 px-4 md:py-12 py-8">
             <div class="max-w-xs md:max-w-md lg:max-w-md mx-auto">
-                <h1 class="text-3xl lg:text-4xl font-semibold text-gray-800  text-center ">
+                <h2 class="text-2xl lg:text-3xl font-bold text-center">
                     Litteratur
-                </h1>
+                </h2>
                 <p class="text-center pt-8">
                     Her finder du vores udvalg af spændende og lærerig fotolitteratur spækket med flotte billeder.
                 </p>
