--- a/src/plakater.html
+++ b/src/plakater.html
@@ -228,9 +228,9 @@
     <div class="2xl:container 2xl:mx-auto">
         <div class="lg:px-20 md:px-6 px-4 md:py-12 py-8">
             <div class="max-w-xs md:max-w-md lg:max-w-md mx-auto">
-                <h1 class="text-3xl lg:text-4xl font-semibold text-gray-800  text-center ">
+                <h2 class="text-2xl lg:text-3xl font-bold text-center">
                     Plakater
-                </h1>
+                </h2>
                 <p class="text-center pt-8">
                     Her finder du vores store udvalg af flotte kunstplakater, klar til at komme op og hænge på din væg.
                     Med plakater fra Lunefuld Lykke får hjemmet et nyt udtryk i løbet af en weekend!
