--- a/src/index.html
+++ b/src/index.html
@@ -362,7 +362,7 @@
                   <div class="relative">
                     <input
                       type="email"
-                      class="w-full p-4 pr-12 text-sm border-gray-200 rounded-lg shadow-sm"
+                      class="w-full p-4 pr-12 text-sm border-gray-200 shadow-sm"
                       placeholder="Skriv din email"
                     />
 
