--- a/src/kunstnere.html
+++ b/src/kunstnere.html
@@ -233,10 +233,10 @@
         <div class="lg:px-20 md:px-6 px-4 md:py-12 py-8">
             <div class="max-w-xs md:max-w-md lg:max-w-md mx-auto mb-10 lg:mb-14">
                 <h2 class="text-2xl lg:text-3xl font-bold text-center">
-                    Mød kunstnerne
+                    Mød fotograferne
                 </h2>
                 <p class="text-center pt-8">
-                    Hos Lunefuld Lykke går vi meget op i at støtte kunstere. Derfor kan du her læse alt om kunstnerne bag plakaterne.
+                    Hos Lunefuld Lykke går vi meget op i at støtte kunstere. Derfor kan du her læse alt om fotograferne bag plakaterne.
                 </p>
             </div>
 
