photographer tom added

--- a/src/index.html
+++ b/src/index.html
@@ -714,7 +714,7 @@
               </p>
       
               <div class="flex justify-center lg:justify-start">
-                <a class="relative inline-block mt-7 px-3 py-2.5 overflow-hidden border-2 border-white group focus:outline-none focus:ring" href="kunstnere.html">
+                <a class="relative inline-block mt-7 px-3 py-2.5 overflow-hidden border-2 border-white group focus:outline-none focus:ring" href="fotografer.html">
                   <div class="inline-flex items-center">
                     <span class="absolute inset-y-0 left-0 w-[2px] transition-all bg-white group-hover:w-full group-active:bg-white"></span>
                     <span class="relative text-base font-medium text-white transition-colors group-hover:text-black">
