turid added + fixes

--- a/src/fotograf_turid.html
+++ b/src/fotograf_turid.html
@@ -229,7 +229,7 @@
         <div class="lg:px-20 md:px-6 px-4 md:py-12 py-8">
             <div class="max-w-xs md:max-w-md lg:max-w-md mx-auto">
                 <h2 class="text-2xl lg:text-3xl font-bold text-center">
-                    Fotograf Tom Jørgensen
+                    Fotograf Turið Dagstad
                 </h2>
             </div>
             <section class="pt-4">
@@ -240,7 +240,7 @@
                     >
                       <img
                         class="absolute inset-0 object-cover w-full h-full"
-                        src="/src/content/tom-jorgensen.jpg"
+                        src="/src/content/turid.jpg"
                         alt="Man using a computer"
                       />
                     </div>
@@ -248,37 +248,38 @@
                     <div class="pb-10 leading-7">     
 
                         <div class="p-8 bg-gray-100">
-                            <h3 class="text-xl pb-4 lg:text-2xl font-semibold text-gray-800">Fakta om Tom</h3>
-                            <p><b>Født:</b> 1974 i Silkeborg, Danmark</p>
-                            <p class="mt-1"><b>Bopæl:</b> Cold Hawaii i Thy</p>
+                            <h3 class="text-xl pb-4 lg:text-2xl font-semibold text-gray-800">Fakta om Turið</h3>
+                            <p><b>Født:</b> 1990 i Thorshavn, Færøerne</p>
+                            <p class="mt-1"><b>Bopæl:</b> Thorshavn, Færøerne</p>
 
                                 <div class="mt-4">
                                     <p class="font-bold">Uddannelse:</p>
                                     <ul class="ml-10 list-disc">
-                                        <li class="pl-3">Uddannet Mediegrafiker fra Aarhus Tech, 1996</li>
-                                        <li class="pl-3">Bachelor i visuel kommunikation, DMJX, 2008</li>
-                                        <li class="pl-3">Grundkursus i Foto fra Fatamorgana, København, 2010</li>
-                                        <li class="pl-3">Har vundet utallige konkurrencer i danmark og resten af norden for sine melankolske fotoserier, og har blandt andet en FLAP-titel fra Dansk foto.</li>
+                                        <li class="pl-3">Student, Miðnám á Kambsdali gymnasium, 2011</li>
+                                        <li class="pl-3">Folkeskolelærer, Føroya Læraraskúli, 2018</li>
+                                        <li class="pl-3">Har vundet international hæder for siden færøske fotoserier, og har blandt andet fået titlen “ridder af det færøske fotoselskab” i 2020</li>
                                     </ul>
                                 </div>
 
                                 <div class="mt-4">
                                     <p class="font-bold">Arbejde:</p>
                                     <ul class="ml-10 list-disc">
-                                        <li class="pl-3">1996-2006: Mediegrafiker hos Østjysk Designbureau. Gik fra at være mediegrafiker til senior art director i virksomheden.</li>
-                                        <li class="pl-3">2008-2012: Art Director, Birkmann Media</li>
-                                        <li class="pl-3">2004-nu: Freelance fotograf - primært landskaber, bylandskaber og arkitektur. I 2012 blev Tom fotograf på fuld tid.</li>
+                                        <li class="pl-3">2012-nu: Tourguide, Faroese Foto-tours</li>
+                                        <li class="pl-3">2012-nu: Freelance fotograf - primært landskaber. Har bl.a. udgivet fotobogen Føroya by Night.</li>
+                                        <li class="pl-3">2018-nu: Folkeskolelærer (siden 2020 på deltid)</li>
                                     </ul>
                                 </div>
                         </div>
 
                         <div class="mt-4">
                             <h3 class="text-xl mt-10 pb-4 lg:text-2xl font-semibold text-gray-800">Biografi</h3>
-                            <p>Siden barndommen har Tom elsket at tegne, arbejde med grafik på computeren og tage fotos. Det var derfor naturligt for Tom at blive grafiker, og arbejde sig op i graderne i bureaubranchen. Efter flere års hektisk arbejdsliv, fik Tom dog lidt af en nedtur. Skulle resten af livet fortsætte på denne måde?
+                            <p>Turið er en af Lunefuld Lykkes unge fotografer. Turið fik sit første kamera som blot 11-årig, og steg hurtigt i graderne i de færøske fotoklubber. Det var i høj grad billeder af de færøske landskaber, og hendes evne til at få en personlig dimension ind i dem, der gjorde hende populær. 
                                 <br> <br> 
-                                Tom tog en drastisk beslutning om at skifte storbylivet ud med en stille tilværelse i det nordvestlige Jylland. Nu lever Tom livet som freelance- og kunstfotograf, og det er ifølge ham “den bedste beslutning jeg nogensinde har taget. Det kan godt være at jeg kører rundt i en gammel rusten Ford Sierra. Til gengæld sover jeg 8 timer hver dag, og min hjerterytme er helt stabil.”
+                                I de sene teenageår begyndte blev den personlige dimension dog mere dyster: Turið fik en lang depression, og brugte fotografiet for at udtrykke hendes aktuelle sindsstemning. Den dystre billedstil blev populær, og Turið fik en masse følgere på Instagram. 112.517, faktisk. Men så blev det for meget.
                                 <br> <br>
-                                Støt Tom i sit nye liv ved at købe nogen af hans plakater!
+                                Hun ville væk fra mediehysteriet, slettede alle SoMe-profiler og Købte en gammel Nokia 3310. Hun begyndte at læse til lærer, oget gav hende mere stabilitet i hverdagen. Nu har hun fundet kameraet frem igen. Hun kommer dog ikke på instagram - hun tager billederne, og Lunefuld Lykke står for alt det praktiske med salg, markedsføring (det Turið så vittigt kalder markedsafføring) og sociale medier. 
+                                <br> <br>
+                                Støt Turið i sit nye liv ved at købe én af hendes flotte plakater!
                             </p>
                         </div>
 
@@ -287,7 +288,7 @@
                                 <div class="inline-flex items-center">
                                   <span class="absolute inset-y-0 left-0 w-[2px] transition-all bg-black group-hover:w-full group-active:bg-black"></span>
                                   <span class="relative text-base font-medium text-black transition-colors group-hover:text-white">
-                                    Køb Toms værker her
+                                    Køb Turiðs værker her
                                   </span>
                                   <svg class="w-7 h-auto ml-5 relative group-hover:fill-white group-active:fill-white" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--ic" width="32" height="32" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="#fffff" d="M8.59 16.59L13.17 12L8.59 7.41L10 6l6 6l-6 6l-1.41-1.41z"></path></svg>
                                 </div>
@@ -301,10 +302,9 @@
               <div class="flex justify-center mb-10">
                   <div class="gap-4 flex flex-row max-w-screen overflow-auto">
                       <!-- <div class="h-60 w-auto"> -->
-                        <img class="h-60 w-auto" src="/src/content/posters/poster-8.jpg" alt="">
-                        <img class="h-60 w-auto" src="/src/content/posters/poster-22.jpg" alt="">
-                        <img class="h-60 w-auto" src="/src/content/posters/poster-15.jpg" alt="">
-                        <img class="h-60 w-auto" src="/src/content/posters/poster-18.jpg" alt="">
+                        <img class="h-60 w-auto" src="/src/content/posters/poster-11.jpg" alt="">
+                        <img class="h-60 w-auto" src="/src/content/posters/poster-20.jpg" alt="">
+                        <img class="h-60 w-auto" src="/src/content/posters/poster-21.jpg" alt="">
                     <!-- </div> -->
                   </div>
               </div>
