--- a/src/fotografer.html
+++ b/src/fotografer.html
@@ -267,7 +267,7 @@
                 <div class="relative">
                   <div class="absolute bottom-0 left-0 p-4 bg-black">
                     <h2 class="text-2xl font-semibold 5 text-white">Turið Dagstad</h2>
-                    <a class="relative mt-4 inline-block px-3 py-2.5 overflow-hidden border-2 border-white group focus:outline-none focus:ring" href="#">
+                    <a class="relative mt-4 inline-block px-3 py-2.5 overflow-hidden border-2 border-white group focus:outline-none focus:ring" href="fotograf_turid.html">
                       <div class="inline-flex items-center">
                         <span class="absolute inset-y-0 left-0 w-[2px] transition-all bg-white group-hover:w-full group-active:bg-white"></span>
                         <span class="relative text-sm font-medium text-white transition-colors group-hover:text-black">
