--- a/src/index.html
+++ b/src/index.html
@@ -319,7 +319,7 @@
         rel="noopener noreferrer"
         class="text-sm font-medium hover:opacity-75"
       >
-        Vi bruger cookies. Ved at trykke videre, accepterer du.
+        Vi bruger cookies. 🍪 Ved at trykke videre, accepterer du.
       </a>
 
       <button
